tests/test_files/valid/nested_json.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

TransportOrderStep helloWorld
    Parameters {
        "loadDirection" : "load",
        "liftHeight": 0,
        "test": {
            "id": [1,2,3,4,5],
            "nested": {
                "nested": {
                    "id": "a string"
                }
            }
        }
    }
End
